Fix a stupid crash in KisMimeData

Never ever pass anything, especially shared pointers by reference!
It is completely not obvious that the pointer is changed by the
function internally!

BUG:372245